<resources>
    <string name="app_name">Penjat</string>
    <string name="benvingut">Benvingut al Penjat</string>
    <string name="usuari">Usuari</string>
    <string name="clau">Clau</string>
    <string name="login">Login</string>
    <string name="registre">Registre</string>
    <string name="tanca">Tancar Sessió</string>
    <string name="PartidaN">Partida Nova</string>
    <string name="PartidaA">Recuperar Partida</string>
    <string name="intents"><b>Intents:</b></string>
    <string name="acerts"><b>Acerts:</b></string>
    <string name="paraules"><b>Paraula</b></string>
    <string name="lletra"><b>Escriu una lletra</b></string>
    <string name="enviar">Enviar</string>
    <string name="nom_partida">Nom partida</string>
    <string name="has_guanyat">Has guanyat</string>
    <string name="compartir">Compartir</string>
    <string name="veure_ranking">Veure ranking</string>
    <string name="ranking_penjat">Ranking Penjat</string>
    <string name="has_perdut">Has perdut</string>
</resources>