<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:backgroundTint="@color/background_green">

    <TextView
        android:id="@+id/textUsuari"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="103dp"
        android:text="@string/usuari"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editpartida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTanca"
        android:layout_width="253dp"
        android:layout_height="69dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/tanca"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonN"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/background_ligth_green"
        android:text="@string/PartidaN"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonA"
        app:layout_constraintEnd_toEndOf="@+id/buttonA"
        app:layout_constraintStart_toStartOf="@+id/buttonTanca"
        app:layout_constraintTop_toBottomOf="@+id/editpartida" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/background_ligth_green"
        android:text="@string/PartidaA"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonTanca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonN" />

    <EditText
        android:id="@+id/editpartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:hint="@string/nom_partida"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuari" />
</androidx.constraintlayout.widget.ConstraintLayout>